# URC-18

./: .gitattributes  .gitignore  README.md
docs/: Makefile  conf.py  index.rst
docs/api/: pwm_arduino_protocol.rst
docs/structure/: rover_cameras.rst  rover_description.rst  rover_gazebo.rst  rover_gui.rst  rover_hw.rst  rover_navigation.rst
docs/tutorial/: 1_starting.rst  2_basestation.rst
docs/usage/: drive_side_controller.rst  rover_cameras.rst  rover_control.rst  rover_gazebo.rst  rover_hw.rst  rover_ik.rst  rover_navigation.rst  rover_teleoperation.rst  urdf.rst
microcontroller/drive-pwm/src/: main.cpp
microcontroller/encoder-monitor/: platformio.ini
microcontroller/encoder-monitor/src/: main.cpp
microcontroller/gps-forwarder/: .gitignore
microcontroller/gps-forwarder/src/: main.cpp
microcontroller/gpsThingy/src/: main.cpp
microcontroller/science_due_firmware/src/: main.cpp
microcontroller/science_firmware/: Science sensors power supply summary .xlsx  probes.ino
microcontroller/science_nano_firmware/: .gitignore  platformio.ini
microcontroller/science_nano_firmware/.pioenvs/: .sconsign.dblite  structure.hash
microcontroller/science_nano_firmware/backup/: unique_functions.h.back
microcontroller/science_nano_firmware/src/: main.cpp  main.cpp.back  nano_slave.cpp  nano_slave_functions.h
microcontroller/sciencedo/: CMakeLists.txt  main.cpp  platformio.ini
microcontroller/sciencedo/src/: main.cpp
pcbs/Arm Board (-002)/-001/: R3-URC18-4-002_01.job  R3-URC18-4-002_01.pro  R3-URC18-4-002_02.job
pcbs/Battery PCBS/: Battery Checker.b#1  Battery Checker.b#3  Battery Checker.b#4  Battery Checker.b#5  Battery Checker.b#6  Battery Checker.b#7  Battery Checker.b#8  Battery Checker.b#9  Battery Checker.brd  Battery Checker.dxf  Battery Checker.pro  Battery Checker.s#1  Battery Checker.s#3  Battery Checker.s#4  Battery Checker.s#5  Battery Checker.s#6  Battery Checker.s#7  Battery Checker.s#8  Battery Checker.sch  Notes  eagle.epf
pcbs/Controls PDB/: Controls PDB.b#1  Controls PDB.b#2  Controls PDB.brd  Controls PDB.s#1  Controls PDB.s#2  Controls PDB.s#3  Controls PDB.sch  eagle.epf
pcbs/Rev 2/: VoltageSensingBoard.b##  VoltageSensingBoard.brd  VoltageSensingBoard.s#1  VoltageSensingBoard.s#2  VoltageSensingBoard.sch
pcbs/Rev3/: R3-URC18-V1.brd  R3-URC18-V1.sch  Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.b#6  Schematic.b#7  Schematic.b#8  Schematic.b#9  Schematic.s#1  Schematic.s#2  Schematic.s#3  Schematic.s#4  Schematic.s#5  Schematic.s#6  Schematic.s#7  Schematic.s#8  Schematic.s#9  Schematic_00.job  Schematic_00.pro  Schematic_01.job  Schematic_02.job  Schematic_03.job  Schematic_03.pro  Schematic_04.job  Schematic_05.job  Schematic_06.job  Schematic_07.job  Schematic_08.job  Schematic_09.job  Schematic_10.job  Schematic_10.pro  Schematic_11.job  Schematic_12.job  Schematic_13.job  Schematic_14.job  Schematic_15.job  Schematic_16.job  (+6 more)
pcbs/Rev3/R3-URC18-V1/: Copper_L1.gbr  Copper_L2.gbr  Copper_L3.gbr  Copper_L4.gbr  Fabrication_Drawing.gbr  Legend_Bot.gbr  Legend_Top.gbr  R3-URC18-V1 (1).emn  R3-URC18-V1 (1).emp  R3-URC18-V1_1_16.xln  (+2 more)
pcbs/science_boards/: README.md  ScienceDuino.b#1  ScienceDuino.b#2  ScienceDuino.b#3  ScienceDuino.b#4  ScienceDuino.b#5  ScienceDuino.brd  ScienceDuino.s#1  ScienceDuino.s#2  ScienceDuino.s#3  ScienceDuino.s#4  ScienceDuino.s#5  ScienceDuino.s#6  ScienceDuino.s#7  ScienceDuino.s#8  ScienceDuino.s#9  ScienceDuino.sch  genericR3Sensor.lbr  genericR3SensorV2.lbr  read_me
rosws/: .gitignore
rosws/src/: .gitignore  .rosinstall
rosws/src/dank_auton/: CMakeLists.txt  package.xml
rosws/src/dank_auton/src/: jank.cpp
rosws/src/rover_auton/: CMakeLists.txt  package.xml
rosws/src/rover_auton/src/: main.cpp  rover.cpp  rover.h
rosws/src/rover_navigation/: CMakeLists.txt  costmap_2d_plugins.xml  package.xml
rosws/src/rover_navigation/action/: GotoPoint.action  RunNav.action
rosws/src/rover_navigation/config/: global_costmap.yaml  local_costmap.yaml  pids.yaml  planner.yaml
rosws/src/rover_navigation/include/rover_navigation/: lines_layer.h
rosws/src/rover_navigation/include/rover_navigation/lines_layer/: lines_layer.h
rosws/src/rover_navigation/launch/: move_base.launch  obstacle_segment.launch  odometry.launch  robot_localization.launch  rover_navigation.launch  rtabmap.launch  visual_odom.launch
rosws/src/rover_navigation/msg/: Path.msg
rosws/src/rover_navigation/src/: lines_layer.cpp
rosws/src/rover_navigation/src/lines_layer/: lines_layer.cpp
rosws/src/rover_navigation/src/nav_executive/: nav1_states.py  nav2_states.py  nav_executive.py  nav_states_common.py  search_state.py
rosws/src/rover_navigation/src/navigator/: main.cpp  nav_action_server.cpp  nav_action_server.h  navigator.cpp  navigator.h
scripts/: .build.sh.swp  build.sh  set_robot_as_ROS_master.sh  setup.sh  setup_firsttime.sh  setup_mapproxy.sh
(+269 files in other folders)
